# Mcp-Publishing

./: main.py  pyproject.toml
src/mcpserver/: deployment.py
